@@ -4,7 +4,7 @@
 
 #todoyutimetrackingheadlettracking .content {
 	margin-left:-380px;
-	width:555px;
+	width:575px;
 	padding:2px;
 	padding-top:3px;
 }
@@ -44,7 +44,7 @@
 }
 
 #todoyutimetrackingheadlettracking .tracking .taskTime {
-	width:240px;
+	width:260px;
 	margin-left:5px;
 }
 
